--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 my first heading>
+    </h1>
+    <h2 my first paragraph></h2>
 </body>
 </html>
